--- a/android-kotlin/feature_guidemap/src/main/res/layout/activity_maps_navigation.xml
+++ b/android-kotlin/feature_guidemap/src/main/res/layout/activity_maps_navigation.xml
@@ -58,7 +58,7 @@
             android:layout_height="48dp"
             android:layout_marginEnd="8dp"
             android:backgroundTint="@android:color/holo_red_dark"
-            android:text="END TRIP"
+            android:text="@string/end_trip"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             app:cornerRadius="24dp" />
